# bingtray

./: .gitignore  BUGFIX_2026-06-15_PART2.md  BUGFIX_2026-06-15_PART6.md  BUGFIX_2026-06-15_PART7.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.txt  PRIVACYPOLICY.md  README.md  TEST_CAROUSEL.md  _config.yml  bingtray.desktop  bingtray.service  index.html  index.md  pe.nikescar.bingtray.yml  query_latest.rs
.github/workflows/: release-desktop.yml  release.yml  vite.docs.yml
ai-rules/: README.md  ai-rules-config.yaml  rust-engineer.md
android/: .gitignore  Cargo.toml  LICENSE  README.md  build.fd.sh  build.gh.sh  build.sh  gradle.properties
android/app/: build.gradle  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/mipmap-anydpi-v26/: bingtray.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/: android_wallpaper.rs  lib.rs
android/src/gui/: mod.rs
bingcli/: Cargo.toml
bingcli/src/: lib.rs  main.rs
bingtray/: Cargo.toml
bingtray-and/: Cargo.toml  build.sh  manifest.yaml
bingtray-and/src/: android_wallpaper.rs  lib.rs  main.rs
bingtray-and/src/gui/: gui_windows.rs  http_app.rs  mod.rs  svg_test.rs
bingtray-and/src/java/pe/nikescar/bingtray/: WallpaperSetter.java
bingtray-core/: Cargo.toml  READMD.md
bingtray-core/src/: lib.rs  main.rs  wallpaper.rs  web.rs
bingtray-core/src/core/: app.rs  database.rs  egui.rs  egui_carousel.rs  exports.rs  mod.rs  request.rs  storage.rs  view.rs
bingtray-core/src/gui/: bingtray_app.rs  gui_windows.rs  mod.rs
bingtray-core/src/wasm/: storage.rs  view.rs
bingtray-gui/: Cargo.toml
bingtray-gui/src/: main.rs
bingtray/src/: app.rs  lib.rs  main.rs  services.rs  wallpaper.rs  web.rs
bingtray/src/core/: app.rs  bingwpclient.rs  conf.rs  database.rs  dialog.rs  egui.rs  egui_carousel.rs  exports.rs  gui.rs  httpclient.rs  mod.rs  request.rs  sqlite.rs  storage.rs
bingtray/src/core/sqlite/: mod.rs  model.rs  schema.rs
bingtray/src/wasm/: mod.rs  request.rs
bingtray/src/wasm/db/: mod.rs  posts.rs  schema.rs
deploy/fdroid/: README.md  Vagrantfile  pe.nikescar.bingtray.yml
deploy/flatpak/: Dockerfile  README.md  pe.nikescar.bingtray.metainfo.xml  pe.nikescar.bingtray.yaml  pe.nikescar.bingtray.yml
deploy/snapcraft/: snapcraft.yaml
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs  services.rs
docs/bugfixes/: BUGFIX_2026-06-15_PART4.md  BUGFIX_2026-06-15_PART5.md  BUGFIX_2026-06-15_PART7.md
docs/superpowers/plans/: 2026-06-12-diesel-mvvm-implementation.md  2026-06-14-viewmodel-refactor-implementation.md  2026-06-15-carousel-viewmodel-implementation.md  2026-06-16-xembed-tray-fallback.md
docs/superpowers/specs/: 2026-06-12-diesel-mvvm-design.md  2026-06-13-cli-viewmodel-design.md  2026-06-14-viewmodel-refactor-design.md  2026-06-15-carousel-viewmodel-design.md  2026-06-16-xembed-tray-fallback-design.md
fastlane/: README.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
fastlane/metadata/android/en-US/images/: README.md
ios/: LICENSE-APACHE  LICENSE-MIT  README.md
ios/bevy_ios_iap_egui/: README.md
mobile/: Cargo.toml  README.md  android.ndk.sh  build.fd.sh  build.gh.sh  build.rs  build.rust-only.sh  build.sh  gradle.properties  manifest.yaml  qemu.sh  settings.gradle
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/aidl/pe/nikescar/bingtray/: IShellCallback.aidl  IShellService.aidl
mobile/app/src/main/java/pe/nikescar/bingtray/: AndroidServiceWallpaper.java  BingtrayWallpaperService.java  ImageLiveWallpaper.java  WallpaperBridge.java  WallpaperService.java  WallpaperSetterService.java
mobile/app/src/main/java/pe/nikescar/uad_shizuku/: ShellService.java  ShizukuBridge.java
mobile/app/src/main/res/mipmap-anydpi-v26/: bingtray.xml
mobile/app/src/main/res/values/: bingtray_background.xml  strings.xml
mobile/app/src/main/res/xml/: bingtray_wallpaper.xml  file_paths.xml  network_security_config.xml
mobile/assets/languages/fluent/: en-US.ftl  ko-KR.ftl
mobile/examples/: benchmark_menu_status.rs  benchmark_pagination.rs  benchmark_upsert.rs  query_latest.rs
mobile/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
mobile/migrations/2026-06-12-000001_create_initial_schema/: down.sql  up.sql
mobile/migrations/2026-06-14-000001_add_cached_at/: down.sql  up.sql
mobile/migrations/2026-06-15-000001_add-crop-coords/: down.sql  up.sql
mobile/resources/: apps-list.txt
mobile/src/: android_activity.rs  android_screensize.rs  android_shizuku.rs  android_wallpaper.rs  api_bingimage.rs  api_setwallpaper.rs  bingtray.rs  bingtray_service.rs  bingtray_stt.rs  calc_bingimage.rs  cli.rs  clipboard_popup.rs  datafusion_bingimage.rs  dlg_about.rs  dlg_about_stt.rs  dlg_settings.rs  dlg_settings_stt.rs  dlg_uninstall_confirm.rs  dlg_uninstall_confirm_stt.rs  dlg_update.rs  dlg_update_stt.rs  dlg_window.rs  duckdb.rs  duckdb_bingimage.rs  ehttp_cache.rs  i18n.rs  install.rs  install_stt.rs  ios_app.rs  lib.rs  log_capture.rs  main.rs  main_android.rs  main_wasm.rs  schema.rs  shared_store.rs  shared_store_stt.rs  tray.rs  utils.rs
mobile/src/db/: mod.rs  models.rs  operations.rs
mobile/src/gui/: bingtray_app.rs  gui_windows.rs  http_app.rs  mod.rs  screen_shape.rs
mobile/src/tray/: backend_gtk.rs  backend_xembed.rs  logic.rs  menu_popup.rs  mod.rs
mobile/src/viewmodel/: background.rs  cache_manager.rs  commands.rs  mod.rs  sources.rs
mobile/tests/: carousel_tests.rs  cli_integration_tests.rs  db_carousel_tests.rs  db_tests.rs  integration_tests.rs  sources_tests.rs  tray_tests.rs  viewmodel_carousel_tests.rs  viewmodel_cli_tests.rs  viewmodel_tests.rs
mobile/tests/tray/: mod.rs
snap/: snapcraft.yaml
src/: lib.rs  main.rs
web/: build.sh  index.html
