[workspace]
resolver = "2"  
members = [
    "bingtray-core",
    "bingtray",
    "mobile",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
version = "0.0.0-git"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3.77"
rand = "0.8"
regex = "1.10"
webbrowser = { version = "1.0.5", default-features = false }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
scraper = "0.20"
log = { version = "0.4", default-features = false }

egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
    "default_fonts",
    "glow",
    # "persistence",
    "android-native-activity",
    "wgpu",
] }
egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
wgpu = { version = "25.0.0" }
# getrandom = { version = "0.2.16" }

[profile.release]
lto = true # "fat"
codegen-units = 1
opt-level = "z"
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false

