[workspace]
resolver = "2"
members = [
    "mobile",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
version = "0.0.16"
versioncode = "16"

[workspace.dependencies]
directories = "5.0"
wallpaper = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.12"
scraper = "0.20"
log = { version = "0.4", default-features = false }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }

# i18n dependencies
egui-i18n = { version = "0.2", features = ["fluent"], default-features = false }
sys-locale = "0.3"

egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "android-native-activity",
] }
egui_extras = { version = "0.33", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
egui-material3 = { version = "0.0.9", default-features = false }

[profile.dev]
# Fast incremental builds for development
opt-level = 0
debug = 2
lto = false
incremental = true
codegen-units = 256

[profile.release]
lto = true # "fat"
codegen-units = 1
opt-level = "z"
debug = 0
strip = "symbols"
panic = "abort"

# [profile.release-with-symbols]
# inherits = "release"
# strip = false

# Fast development profile - optimized but without slow LTO
[profile.dev-release]
inherits = "release"
lto = false           # Disable LTO for faster builds (saves 50%+ compile time)
codegen-units = 16    # Parallel code generation
opt-level = 2         # Good optimization without being too slow
incremental = true    # Enable incremental compilation
strip = "symbols"     # Still strip symbols to reduce size
