[package]
name = "bingtray-android"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[lib]
name = "bingtray_android"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
android_logger = "0.15"
android-activity = { version = "0.6", features = ["native-activity"] }
ndk-sys = "0.6.0"
ndk = "0.9.0"
ndk-context = "0.1"
bingtray-core = { path = "../bingtray-core" }
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
egui-winit = "0.31.1"
image = { version = "0.25.5", features = ["jpeg", "png"] }
ehttp = "0.5"
poll-promise = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
jni = "0.21"
webbrowser = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"
