[package]
name = "bingcli"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "bingcli"
path = "src/main.rs"

[dependencies]
bingtray-core = { path = "../bingtray-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
