[package]
name = "bingtray-core"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

# Conditional dependencies for non-Android platforms
[target.'cfg(not(target_os = "android"))'.dependencies]
directories = { workspace = true }
wallpaper = { workspace = true }
