[package]
name = "bingtray"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Core(Desktop, Android, WASM)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
directories = "5.0"
tokio = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
scraper = { workspace = true }
webbrowser = { version = "1.0.5", default-features = false }
ureq = { version = "2.9", features = ["json"] }

# GUI. All(Desktop. Android, WASM)
egui = { workspace = true }
eframe = { workspace = true, default-features = false }
egui_extras = { workspace = true }
egui-material3 = { workspace = true }

getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { workspace = true, default-features = false }

diesel = { version = "2.1.0", features = ["sqlite"] }

# Wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.73"
js-sys = "0.3.77"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
eframe = { workspace = true, default-features = false, features = ["default_fonts", "glow"] }
getrandom = { version = "0.2.16", features = ["js"] }
wgpu = { workspace = true, features = ["webgpu"]}

sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled", "relaxed-idb"] }

# Desktop, Android
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
mimalloc = "0.1"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"], default-features = false }
rfd = { version = "0.15.3", optional = true }

# Desktop
[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
egui-winit = { git = "https://github.com/emilk/egui", default-features = false, features = ["bytemuck", "links", "serde", "wayland", "x11"] }
wgpu = { workspace = true, features = ["dx12","metal","vulkan","gles"] }

# Android
[target.'cfg(target_os = "android")'.dependencies]
wgpu = { workspace = true, features = ["vulkan","gles"] }

[dev-dependencies]
ureq = { version = "2.9", features = ["json"] }
egui-file-dialog = "0.11.0"
