[package]
name = "bingtray"
build = "build.rs"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[lib]
name = "bingtray"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bingtray"
path = "src/main.rs"
# Binary supports all modes: GUI, tray, and CLI
# Android uses lib entry point via android_main

[dependencies]
# Core dependencies
log = { workspace = true }
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", features = ["std"], optional = true }
chrono = "0.4"

# Database
diesel = { version = "2.3.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3.0"
smol = "2.0"

# UI framework
egui = { workspace = true }
eframe = { workspace = true, features = ["glow", "default_fonts", "wayland", "x11"] }
egui_extras = { workspace = true }
egui-material3 = { workspace = true }

# i18n
egui-i18n = { workspace = true }
sys-locale = { workspace = true }

# HTTP for cross-platform image downloads
ehttp = "0.5.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
webbrowser = { version = "1.1", default-features = false }

# Utilities
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
crossbeam-queue = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
poll-promise = "0.3.0"
bincode = "1.3"
md5 = "0.7"
regex = "1.10"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies]
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
tao = "0.33"
wallpaper = "3.2.0"
trash = "5.2"
env_logger = { version = "0.11", default-features = false }
directories = { workspace = true }
opener = "0.7"
dirs = "5.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = { version = "0.1", default-features = false }
jni = { version = "0.21", default-features = false }
android_logger = { version = "0.15", default-features = false }
android-activity = { version = "0.6", default-features = false, features = ["native-activity"] }
ndk-sys = { version = "0.6.0", default-features = false }
eframe = { workspace = true, default-features = false, features = ["default_fonts","glow","android-native-activity"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
] }
eframe = { workspace = true, default-features = false, features = ["default_fonts","glow"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }
eframe = { workspace = true, default-features = false, features = ["default_fonts","glow"] }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
eframe = { workspace = true, default-features = false, features = ["default_fonts","glow","x11", "wayland"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
eframe = { workspace = true, default-features = false, features = ["default_fonts","glow"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
winres = "0.1.12"
